feat(monitor): 新增实例监控功能及相关组件
添加实例监控功能，包括CPU、内存、磁盘和网络等指标的展示。主要修改包括：
1. 新增InstanceMonitorWrapper组件处理监控数据获取和错误处理
2. 实现InstanceMonitorBase组件展示监控图表
3. 更新metricDict配置使用libvirt指标
4. 优化PrometheusChart组件支持domain参数
5. 添加监控相关多语言配置
6. 在实例详情页添加监控选项卡

--- a/src/locales/zh-hans.json
+++ b/src/locales/zh-hans.json
@@ -3239,5 +3239,12 @@
   "{name} {id} could not be found.": "您查看的资源{name} {id} 无法获取",
   "{number} {resource}": "{number}个{resource}",
   "{pageSize} items/page": "{pageSize} 条/页",
-  "{seconds} seconds": "{seconds}秒"
+  "{seconds} seconds": "{seconds}秒",
+  "DISK Read/Write": "磁盘读写",
+  "Monitor": "监控",
+  "Unrescue": "取消",
+  "Verify Resize/Migrate": "验证调整/迁移",
+  "Read IOPS/GB": "读取IOPS/GB",
+  "Write IOPS/GB": "写入IOPS/GB",
+  "Loading monitoring data...": "正在加载监控数据..."
 }
